# nau7802

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: workflow.yml
src/nau7802/: cli.py
src/nau7802/device/: __init__.py  adc.py  control.py  device.py  power.py  setting.py
src/nau7802/protocol/: __init__.py  bus.py
src/nau7802/register/: _base.py  _byte.py  _int24.py  _int32.py
src/nau7802/registers/: __init__.py  adc_ctrl1.py  adc_ctrl3.py  adco.py  ctrl1.py  ctrl2.py  gcal1.py  gcal2.py  i2c_control.py  ocal1.py  ocal2.py  pu_ctl.py  pwr_ctrl.py  rev_id.py
