[project]
name = "nau7802"
dynamic = [
    "version",
]
dependencies = [
    "typed-registers==0.1.1",
]
description = "A typed, register-accurate Python driver for the NAU7802 24-bit ADC load-cell amplifier."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Joshua B. Bussdieker", email = "jbussdieker@gmail.com" },
]
maintainers = [
    { name = "Joshua B. Bussdieker", email = "jbussdieker@gmail.com" },
]
classifiers = [
    "Topic :: Scientific/Engineering :: Instrument Drivers",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Typing :: Typed",
]
keywords = [
    "nau7802",
    "adc",
    "load-cell",
    "i2c",
    "embedded",
    "raspberry-pi",
]
license = "MIT"

[project.scripts]
nau7802 = "nau7802.cli:main"

[project.optional-dependencies]
i2c = ["smbus2"]
cli = ["click", "smbus2"]
dev = ["mypy"]

[project.urls]
Homepage = "https://github.com/jbussdieker/nau7802"
Documentation = "https://github.com/jbussdieker/nau7802/blob/main/README.md"
Repository = "https://github.com/jbussdieker/nau7802"
Issues = "https://github.com/jbussdieker/nau7802/issues"
Changelog = "https://github.com/jbussdieker/nau7802/blob/main/CHANGELOG.md"

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.0"
